# jnjs

./: .clang-format  .gitmodules  CMakeLists.txt  Doxyfile  README.md  main.cpp
ext/: CMakeLists.txt
include/jnjs/: binding.h  context.h  function.h  jnjs.h  module.h  runtime.h  value.h
include/jnjs/detail/: function_helpers.h  fwd.h  quickjs_stub.h  type_traits.h  types.h  util.h  value_helpers.h
include/jnjs/detail/value_ext/: all.h  optional.h  string.h  unordered_map.h  vector.h
src/: all_types.inl  context.cpp  function.cpp  function_helpers.cpp  runtime.cpp  value.cpp  value_helpers.h
test/: CMakeLists.txt  basic.cpp  benchmarks.cpp  class_binding.cpp  function_binding.cpp  functions.cpp  module.cpp  subscript.cpp
