if (USE_EXTERNAL_QUICKJS)
    find_package(quickjs REQUIRED)
else ()
    add_subdirectory(quickjs)
    add_library(qjs::qjs ALIAS qjs)
endif ()

if (JNJS_ENABLE_TESTING)
    include(CTest)
    if (JNJS_USE_EXTERNAL_CATCH2)
        find_package(Catch2 3 REQUIRED)
    else ()
        add_subdirectory(Catch2)
        list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/Catch2/extras")
    endif ()
    include(Catch)
endif ()